# yai-nexus-agentkit

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_FIX_SUMMARY.md  CI_CD_REFACTOR_STATUS.md  CLAUDE.md  CODE_REVIEW_AG_UI.md  JS_TS_CODE_REVIEW_GUIDELINES.md  LOGGING_IMPROVEMENT_PLAN.md  LOGGING_STRATEGY.md  LOGGING_UNIFICATION_PROPOSAL.md  LOGURU_SUPPORT_PACKAGE_PLAN.md  MONOREPO_MIGRATION_PLAN.md  NEW_PLAN.md  PROJECT_SUMMARY.md  PUBLISH_REFACTOR_PROPOSAL.md  PYTHON_CODE_REVIEW_GUIDELINES.md  README.md  README_zh-CN.md  SLS_EXAMPLE_SIMPLIFICATION_PLAN.md  UNIFIED_LOGGING_IMPROVEMENT_PLAN.md  adapter-code-redundancy-assessment.md  adapter-code-redundancy-review.md  adapter-elegance-optimization-summary.md  adapter-refactoring-summary.md  code_review_summary.md  debug_qwen.py  event-translator-externalization-summary.md  for-tomorrow.md  new_plan.md  nextjs-logger-solutions.md  nx.json  package-lock.json  package.json  persistence_architecture.md  pino-pretty-solution-analysis.md  pnpm-lock.yaml  pnpm-workspace.yaml  (+21 more)
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/rules/: BUILD_AND_RUN_GUIDELINES.mdc  JS_TS_CODE_REVIEW_GUIDELINES.mdc  PYTHON_CODE_REVIEW_GUIDELINES.mdc  PYTHON_GITHUB_CODING_GUIDELINES.mdc  build_and_run_examples.mdc  nx-rules.mdc  yai-open-source.mdc
.github/instructions/: nx.instructions.md
.github/workflows/: npm-publish.yml  publish-all.yml  publish-packages.yml  pypi-publish.yml  reusable-npm-publish.yml  reusable-pypi-publish.yml  ruff-lint.yml  test-publish.yml
configs/DEFAULT_GROUP/: llms.json
docs/: Roadmap-AgentKit-2.0.md  Roadmap-Fekit-2.0.md  YAI-Nexus-2.0-Execution-Plan.md  fekit-handler-alternative-proposal.md  fekit-handler-final-proposal.md  fekit-handler-refactor-analysis.md  fekit-handler-refactor-proposal.md  fekit-handler-third-alternative-proposal.md  fekit-handler-v4-fix.md  nextjs-debug-analysis.md
examples/: llm_usage_demo.py
examples/fast_api_app/: app.py  configs.py  demo_client.py  main.py  test_persistence.py
examples/fast_api_app/api/: chat.py  chat_progressive.py  conversations.py
examples/fast_api_app/core/: services.py
examples/loglayer-example/: DEMO.md  README.md  package.json
examples/loglayer-example/src/: basic-usage.js  migration-example.js  transport-tests.js
examples/loguru-example/: .env.example  README.md  main.py  project.json  pyproject.toml
examples/nextjs-app/: README.md  next.config.ts  package-lock.json  package.json
examples/nextjs-app/src/app/: globals.css  layout.tsx  page.tsx
examples/nextjs-app/src/app/api/copilotkit/: route.ts
examples/nextjs-app/src/app/api/logging-demo/: route.ts
examples/nextjs-app/src/components/: ClientProviders.tsx  ThemeToggle.tsx
examples/python-backend/: .env.example  README.md  agent.py  config.py  handlers.py  llm_setup.py  logging_strategies.py  main.py  middleware.py  project.json  pyproject.toml  requirements.txt  sls_example.py
examples/sls-logger-example/: main.py  requirements.txt
examples/sls-loguru-example/: .env.example  main.py  project.json
examples/sls-pino-example/: README.md  package.json  tsconfig.json
examples/sls-pino-example/src/: main.ts
old/lucas_ai_core/: __init__.py
old/lucas_ai_core/config/: config_model.py
old/lucas_ai_core/infrastructure/: __init__.py  mcp_client.py  snow_flake.py
old/lucas_ai_core/infrastructure/llm/: llm_client_enum.py  llm_client_utils.py  llm_model.py
old/lucas_ai_core/infrastructure/pg/: connection.py  pg_checkpoint_client.py
old/lucas_ai_core/infrastructure/pg/domain/: saved_pg_conversation.py  saved_pg_message.py
old/lucas_ai_core/infrastructure/pg/extra/: __init__.py  extra_fields.py
old/lucas_ai_core/infrastructure/pg/models/: ai_conversation.py  ai_message.py
old/lucas_ai_core/infrastructure/pg/repository/: AIConversationRepository.py  AiMessageRepository.py
old/lucas_ai_core/interaction/: __init__.py  api_handler.py
old/lucas_ai_core/interaction/sse/: __init__.py  base_stream.py  lang_chain_sse_handler.py  lang_graph_sse_handler.py  langchain_stream.py  langgraph_stream.py  message.py  sse_handler.py  validators.py
old/lucas_ai_core/orchestration/: __init__.py  agent_orchestrator.py  state_manager.py  workflow_manager.py
old/lucas_ai_core/orchestration/flow/: PlanningFlow.py
scripts/: cleanup-logs.js  prepare-release.sh  rebuild-all.sh  run-logging-demos.sh  services.sh  start-all-examples.sh  start-nextjs.sh  start-python.sh  start-services.sh  stop-all-examples.sh  stop-nextjs.sh  stop-python.sh  stop-services.sh  test-end-to-end.sh  test-logger-compatibility.sh  test.sh  validate-workflows.sh
src/yai_nexus_agentkit/: __init__.py
src/yai_nexus_agentkit/adapter/: __init__.py  sse_advanced.py  sse_basic.py
src/yai_nexus_agentkit/core/: __init__.py  checkpoint.py  embedding.py  events.py  llm.py  repository.py
src/yai_nexus_agentkit/infrastructure/llm/: openai.py
src/yai_nexus_agentkit/llm/: __init__.py  factory.py  models.py  providers.py
src/yai_nexus_agentkit/llm/internal/: __init__.py  creators.py  registry.py
src/yai_nexus_agentkit/persistence/: __init__.py  checkpoint.py  db_config.py  repository.py
src/yai_nexus_agentkit/persistence/models/: __init__.py  conversation.py  message.py
tests/integration/: test_adapter_integration.py
tests/unit/: test_agui_adapter.py
