[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yai-nexus-agentkit"
version = "0.0.1"
description = "A Python framework for building AI Agents."
authors = [
    { name="YAI-Nexus", email="contact@yai-nexus.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/yai-nexus/agentkit"
Repository = "https://github.com/yai-nexus/agentkit"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
] 