[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[project]
name = "yai-nexus-agentkit"
version = "0.0.1"
description = "A Python toolkit for building AI applications, designed to be flexible and extensible."
authors = [
    { name="YAI-Nexus", email="contact@yai-nexus.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "langchain",
    "langchain-core",
    "langchain",
    "langgraph",
    "pydantic",
    "yai-nexus-configuration>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/yai-nexus/yai-nexus-agentkit"
Repository = "https://github.com/yai-nexus/yai-nexus-agentkit"


[project.optional-dependencies]
# LLM Providers
openai = ["langchain-openai>=0.1.0"]
zhipu = ["langchain-community", "zhipuai"]
anthropic = ["langchain-anthropic"]
tongyi = ["langchain-community", "dashscope"]

# Checkpoint/Persistence Backends
postgres = ["tortoise-orm", "psycopg"]
redis = ["redis"]

# Web Adapter Helpers
fastapi = ["fastapi", "sse-starlette", "uvicorn"]

# Development and Quality Tools
dev = [
    "black",
    "ruff",
    "pre-commit",
    "pytest-cov",
]

# A bundle for convenience
all = [
    "yai-nexus-agentkit[openai]",
    "yai-nexus-agentkit[zhipu]",
    "yai-nexus-agentkit[anthropic]",
    "yai-nexus-agentkit[tongyi]",
    "yai-nexus-agentkit[postgres]",
    "yai-nexus-agentkit[redis]",
    "yai-nexus-agentkit[fastapi]",
    "yai-nexus-agentkit[dev]",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]